# dashboard_fullstack

./: .env  .gitignore  README.md  compose.yaml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  settings.py
backend/backend/: db_connector.py  main.py
backend/backend/models/: todo.py  user.py  weather.py  weather_response.py
backend/backend/routers/: auth_router.py  todo_router.py  user_router.py  weather_router.py
backend/backend/util/: auth_util.py  util.py
envs/: mongo.env
frontend/: .env  .gitignore  Dockerfile  index.html  main.css  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.vue  main.ts
frontend/src/components/: HomePageWeather.vue
frontend/src/models/: hourlyForecast.ts  recoveryQuestions.ts  todo.ts  user.ts
frontend/src/router/: index.ts
frontend/src/store/: todo.ts  user.ts  weather.ts
frontend/src/views/: DailyForecast.vue  HomeView.vue  Login.vue  NavigationView.vue  Signup.vue  TodoView.vue
