[tool.poetry]
name = "dashboard_backend"
version = "0.1.0"
description = ""
authors = ["Justin Wells <justwells111@gmail.com>"]
packages = [{ include = "backend" }] 

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pydantic = {extras = ["email"], version = "^2.11.3"}
fastapi = "^0.115.12"
beanie = "^1.29.0"
uvicorn = "^0.34.2"
python-multipart = "^0.0.20"
PyJWT = "^2.10.1"
passlib = "^1.7.4"
bcrypt = "^4.3.0"
pydantic-settings = "^2.14.1"

[tool.poetry.group.dev.dependencies]
isort = "^8.0.1"
black = "^26.3.1"
poethepoet = "^0.45.0"

[tool.poetry.requires-plugins]
poethepoet = ">=0.45.0"

[tool.poe.tasks.format]
shell = "isort . && black ."

[tool.poetry.scripts]
start = "backend.main:start"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
