[tool.poetry]
name = "dashboard_backend"
version = "0.1.0"
description = ""
authors = ["Justin Wells <justwells111@gmail.com>"]
packages = [{ include = "backend" }] 

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pydantic = {extras = ["email"], version = "^2.11.3"}
fastapi = "^0.115.12"
beanie = "^1.29.0"
uvicorn = "^0.34.2"
python-multipart = "^0.0.20"
PyJWT = "^2.10.1"
passlib = "^1.7.4"
bcrypt = "^4.3.0"
pydantic-settings = "^2.14.1"

[tool.poetry.group.dev.dependencies]
isort = "^8.0.1"
black = "^26.3.1"
poethepoet = "^0.45.0"
flake8 = "^7.3.0"
flake8-pyproject = "^1.2.4"

[tool.poetry.requires-plugins]
poethepoet = ">=0.45.0"

[tool.poe.tasks.format]
shell = "isort backend && black backend"

[tool.poe.tasks.lint]
shell = "flake8 backend"

[tool.poetry.scripts]
start = "backend.main:start"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
per-file-ignores = [
    "__init__.py:F401",
]
exclude = [".venv", "__pycache__", "build", "dist"]
count = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
